--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <title>Fauna + Netlify Functions</title>
+    <title>To Do List </title>
   </head>
   <body>
     <noscript>
