--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+<!--    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
 
-    <title>To Do List </title>
+    <title>To Do Tasks </title>
   </head>
   <body>
     <noscript>
